--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="leftSide">
       <div class="fullRow">
         <div class="col">
-        <div class="theCartBox">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount1"></div>
             <div class="theProductPic"><img id="product1" src="#" alt=""></div>
             <div class="itemDetails">
@@ -31,7 +31,7 @@ data-name="" data-price="" display-price="" discount="" id="item1"></a></div>
           </div>
         </div>
         <div class="col">
-		<div class="theCartBox">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount2"></div>
             <div class="theProductPic"><img id="product2" src="#" alt=""></div>
             <div class="itemDetails">
@@ -43,9 +43,9 @@ data-name="" data-price="" display-price="" discount="" id="item2"></a></div>
               </div>
             </div>
           </div>
-		</div>
+        </div>
         <div class="col">
-		<div class="theCartBox">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount3"></div>
             <div class="theProductPic"><img id="product3" src="#" alt=""></div>
             <div class="itemDetails">
@@ -57,9 +57,9 @@ data-name="" data-price="" display-price="" discount="" id="item3"></a></div>
               </div>
             </div>
           </div>
-		</div>
+        </div>
         <div class="col">
-		<div class="theCartBox">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount4"></div>
             <div class="theProductPic"><img id="product4" src="#" alt=""></div>
             <div class="itemDetails">
@@ -71,9 +71,9 @@ data-name="" data-price="" display-price="" discount="" id="item4"></a></div>
               </div>
             </div>
           </div>
-		 </div>
-		  <div class="col">
-        <div class="theCartBox">
+        </div>
+        <div class="col">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount5"></div>
             <div class="theProductPic"><img id="product5" src="#" alt=""></div>
             <div class="itemDetails">
@@ -87,7 +87,7 @@ data-name="" data-price="" display-price="" discount="" id="item5"></a></div>
           </div>
         </div>
         <div class="col">
-		<div class="theCartBox">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount6"></div>
             <div class="theProductPic"><img id="product6" src="#" alt=""></div>
             <div class="itemDetails">
@@ -99,9 +99,9 @@ data-name="" data-price="" display-price="" discount="" id="item6"></a></div>
               </div>
             </div>
           </div>
-		</div>
+        </div>
         <div class="col">
-		<div class="theCartBox">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount7"></div>
             <div class="theProductPic"><img id="product7" src="#" alt=""></div>
             <div class="itemDetails">
@@ -113,9 +113,9 @@ data-name="" data-price="" display-price="" discount="" id="item7"></a></div>
               </div>
             </div>
           </div>
-		</div>
+        </div>
         <div class="col">
-		<div class="theCartBox">
+          <div class="theCartBox">
             <div class="theDiscount" id="discount8"></div>
             <div class="theProductPic"><img id="product8" src="#" alt=""></div>
             <div class="itemDetails">
@@ -127,18 +127,21 @@ data-name="" data-price="" display-price="" discount="" id="item8"></a></div>
               </div>
             </div>
           </div>
-		 </div>
+        </div>
       </div>
     </div>
     <div class="rightSide">
-		<h2 class="cartDetails">Cart Details</h2>
-	<div>
-	<ol id="show-cart"></ol>
-	</div>
-	<div class="totalCost">Total  &#x20B9: <span id="total-cart"></span ></div>  
-	 </div>
+      <h2 class="cartDetails">Cart Details</h2>
+      <div>
+        <ol id="show-cart">
+        </ol>
+      </div>
+      <div class="totalCost">Total  &#x20B9: <span id="total-cart"></span ></div>
+    </div>
   </div>
 </div>
+<footer>
+  <p><a href="https://www.രാജേഷ്.com/adobe/" target="_blank">https://രാജേഷ്.com/adobe/</a></p>
+</footer>
 </body>
-
 </html>
