--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@ data-name="" data-price="" display-price="" discount="" id="item8"></a></div>
   </div>
 </div>
 <footer>
-  <p><a href="https://www.രാജേഷ്.com/adobe/" target="_blank">https://രാജേഷ്.com/adobe/</a></p>
+  <p><a href="https://രാജേഷ്.com" target="_blank">https://രാജേഷ്.com/</a></p>
 </footer>
+	
 </body>
 </html>
